--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,9 +101,9 @@
                 android:id="@+id/tvToday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Today"
+                android:text="today"
                 android:textColor="#9E9E9E"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="28dp" />
 
