--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
+
+    <!-- AREA SCROLL -->
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollArea"
         android:layout_width="0dp"
@@ -20,6 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- FILTER WAKTU + SEARCH -->
             <LinearLayout
                 android:id="@+id/topControls"
                 android:layout_width="wrap_content"
@@ -40,10 +43,11 @@
                     app:cornerRadius="50dp"
                     app:strokeWidth="1dp"
                     app:strokeColor="@android:color/black"
-                    app:iconGravity="textEnd"
                     app:icon="@drawable/arrow_down"
                     app:iconTint="@android:color/black"
                     app:iconPadding="8dp"
+                    app:iconGravity="textEnd"
+                    app:iconSize="0dp"
                     android:paddingStart="24dp"
                     android:paddingTop="12dp"
                     android:paddingEnd="24dp"
@@ -59,17 +63,19 @@
                     android:scaleType="centerInside"/>
             </LinearLayout>
 
+            <!-- TOTAL SALDO -->
             <TextView
                 android:id="@+id/tvTotalAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
-                android:text="$301.95"
+                android:text="Rp"
                 android:textColor="#000000"
-                android:textSize="52sp"
+                android:textSize="42sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
 
+            <!-- CHART -->
             <LinearLayout
                 android:id="@+id/chartContainer"
                 android:layout_width="match_parent"
@@ -97,6 +103,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- LABEL TODAY -->
             <TextView
                 android:id="@+id/tvToday"
                 android:layout_width="wrap_content"
@@ -107,157 +114,17 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="28dp" />
 
-            <LinearLayout
-                android:id="@+id/todayList"
+            <!-- LIST TRANSAKSI HARI INI -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTodayTransactions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingVertical="12dp"
-                    android:paddingStart="20dp"
-                    android:paddingEnd="24dp">
-
-                    <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/rounded_box_gray" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:paddingStart="12dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="pet care"
-                            android:textStyle="bold"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="kit-kat"
-                            android:textColor="#9E9E9E"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="- $400.00"
-                        android:textStyle="bold"
-                        android:textColor="#000"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingVertical="12dp"
-                    android:paddingStart="20dp"
-                    android:paddingEnd="24dp">
-
-                    <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/rounded_box_gray" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:paddingStart="12dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="pet care"
-                            android:textStyle="bold"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="kit-kat"
-                            android:textColor="#9E9E9E"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="- $400.00"
-                        android:textStyle="bold"
-                        android:textColor="#000"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingVertical="12dp"
-                    android:paddingStart="20dp"
-                    android:paddingEnd="24dp">
-
-                    <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/rounded_box_gray" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:paddingStart="12dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="pet care"
-                            android:textStyle="bold"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="kit-kat"
-                            android:textColor="#9E9E9E"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="- $400.00"
-                        android:textStyle="bold"
-                        android:textColor="#000"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-            </LinearLayout>
+                android:paddingTop="8dp"/>
 
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
 
+    <!-- NAVBAR BAWAH -->
     <LinearLayout
         android:id="@+id/bottomNavbar"
         android:layout_width="0dp"
