--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,60 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
+    <!-- SEARCH OVERLAY (Instagram Style) -->
+    <LinearLayout
+        android:id="@+id/searchOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFFFF"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:visibility="gone"
+        android:elevation="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/bg_search_modern"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/search_circle_bg"
+                android:tint="#000000"/>
+
+            <EditText
+                android:id="@+id/etSearch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Search transactions..."
+                android:textSize="16sp"
+                android:background="@null"
+                android:paddingStart="12dp"/>
+
+            <ImageView
+                android:id="@+id/btnCloseSearch"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:src="@drawable/ic_close"
+                android:tint="#000000"/>
+        </LinearLayout>
+
+        <!-- RESULT LIST -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSearchResults"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"/>
+    </LinearLayout>
+
+
     <!-- AREA SCROLL -->
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollArea"
@@ -75,7 +129,6 @@
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
 
-            <!-- CHART -->
             <LinearLayout
                 android:id="@+id/chartContainer"
                 android:layout_width="match_parent"
