--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,27 @@
 
     </style>
 
+    <style name="Title">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#111</item>
+        <item name="android:layout_marginTop">14dp</item>
+    </style>
+
+    <style name="Value">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#444</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
+
+    <style name="Success">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#00A859</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+
 
 
     <style name="CircleShape">
