--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="Search transactions..."
+                android:hint="Search..."
                 android:textSize="16sp"
                 android:background="@null"
                 android:paddingStart="12dp"/>
