--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -87,11 +87,11 @@
             android:src="@drawable/wallet" />
 
         <ImageView
-            android:id="@+id/navAdd"
+            android:id="@+id/navDash"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:padding="12dp"
-            android:src="@drawable/add" />
+            android:src="@drawable/dash" />
 
         <ImageView
             android:id="@+id/navStats"
