--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -21,12 +22,12 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/btnBack"
+                android:id="@+id/btnDetailBack"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:padding="10dp"
                 android:src="@drawable/ic_back"
-                android:tint="#000000" />
+                app:tint="#000000" />
 
             <TextView
                 android:layout_width="0dp"
@@ -86,7 +87,7 @@
                     android:layout_width="22dp"
                     android:layout_height="22dp"
                     android:src="@drawable/ic_chevron_right"
-                    android:tint="#888888" />
+                    app:tint="#888888" />
 
             </LinearLayout>
 
@@ -114,7 +115,7 @@
                     android:layout_width="22dp"
                     android:layout_height="22dp"
                     android:src="@drawable/ic_chevron_right"
-                    android:tint="#888888" />
+                    app:tint="#888888" />
 
             </LinearLayout>
 
@@ -140,7 +141,7 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:src="@drawable/bill"
-            android:tint="#111111" />
+            app:tint="#111111" />
 
         <ImageView
             android:id="@+id/navWallet"
@@ -149,15 +150,14 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:src="@drawable/wallet"
-            android:tint="#111111" />
+            app:tint="#111111" />
 
         <ImageView
-            android:id="@+id/navAdd"
+            android:id="@+id/navDash"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:padding="12dp"
-            android:src="@drawable/add"
-            android:tint="#111111" />
+            android:src="@drawable/dash" />
 
         <ImageView
             android:id="@+id/navStats"
@@ -166,7 +166,7 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:src="@drawable/stats"
-            android:tint="#111111" />
+            app:tint="#111111" />
 
         <ImageView
             android:id="@+id/navSetting"
@@ -175,7 +175,7 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:src="@drawable/setting"
-            android:tint="#111111" />
+            app:tint="#111111" />
     </LinearLayout>
 
 </RelativeLayout>
